--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -950,6 +950,7 @@ input[type="text"].searchField {
 }
 .reverseThemeHoler {
     margin-top: 16px;
+    padding-bottom: 15px;
 }
 .reverseThemeHoler .addCircle {
     color: #fff;
@@ -970,10 +971,10 @@ input[type="text"].searchField {
 .videoTopDescCell {
     display: table-cell;
     vertical-align: middle;
-    height: 70px;
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
+    padding-top: 10px;
 }
 .underneathPlayer {
     margin: 0 0 43px 12px;
